# LightningMedSeg3D

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/btcv/: attention_unet.yaml  medformer.yaml  resunet.yaml  segformer.yaml  swin_unetr.yaml  unet.yaml  unetpp.yaml  unetr.yaml  vnet.yaml
configs/msd_task03/: attention_unet.yaml  medformer.yaml  resunet.yaml  segformer.yaml  swin_unetr.yaml  unet.yaml  unetpp.yaml  unetr.yaml  vnet.yaml
docs/: api.md  architectures.md  conf.py  configuration.md  contributing.md  datasets.md  index.md  installation.md  quickstart.md  reproducibility.md  requirements.txt
reproducible_capsule/: REPRODUCING.md
reproducible_capsule/code/: demo_predict.py  run
reproducible_capsule/environment/: Dockerfile
reproducible_capsule/metadata/: metadata.yml
src/lightning_medseg3d/: __init__.py  cli.py
src/lightning_medseg3d/callbacks/: __init__.py
src/lightning_medseg3d/datamodules/: __init__.py  segmentation_datamodule.py
src/lightning_medseg3d/losses/: __init__.py
src/lightning_medseg3d/metrics/: __init__.py
src/lightning_medseg3d/models/: __init__.py  factory.py  segmentation_module.py
src/lightning_medseg3d/models/backbones/: __init__.py  attention_unet.py  attention_unet_utils.py  conv_layers.py  medformer.py  medformer_utils.py  segformer.py  trans_layers.py  unet.py  unet_utils.py  unetpp.py  unetr.py  utils.py
tests/: test_factory.py
