[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning_medseg3d"
version = "1.0.0"
description = "Reproducible 3D medical image segmentation benchmark built on PyTorch Lightning CLI and MONAI. Companion code for the BTCV/MSD Task03 liver and hepatic-tumour evaluation paper."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Marcos Fdez-Gonzalez", email = "marcos.fgonzalez@usc.es" },
    { name = "Lois Nodar-Corral" },
    { name = "Xose R. Fdez-Vidal" },
    { name = "Sergio Estevez-Fernandez" },
    { name = "Enrique Comesaña" },
]
keywords = ["medical-imaging", "segmentation", "pytorch-lightning", "monai", "btcv", "msd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.1",
    "pytorch-lightning>=2.2",
    "monai>=1.3",
    "nibabel>=5.1",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "jsonargparse[signatures]>=4.27",
    "tensorboard>=2.15",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "einops>=0.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "black>=24.3", "mypy>=1.8"]

[project.scripts]
# Single Lightning CLI entry-point that handles fit/validate/test/predict.
lightning-medseg3d = "lightning_medseg3d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
